# Artisan

./: .editorconfig  .gitattributes  .gitmodules  Artisan.sln  CraftIt.sln  LICENCE.md  README.md  SamplePlugin.sln  TODO
.github/workflows/: codeql-analysis.yml  nodejs.yml
Artisan/: ActionWatching.cs  Artisan.cs  Artisan.csproj  Artisan.json  BlockingTask.cs  CommandProcessor.cs  Configuration.cs  ConsumableChecker.cs  DRM.cs  Extensions.cs  Global.cs  GlobalSuppressions.cs  HQManager.cs  PluginAddressResolver.cs  PluginUI.cs  RecipeWindowUI.cs  Service.cs
Artisan/Autocraft/: AutoDepositManager.cs  AutocraftDebugTab.cs  CommandProcessor.cs  ConsumableChecker.cs  Endurance.cs  EnduranceCraftWatcher.cs  HQManager.cs  Handler.cs  RepairManager.cs  Throttler.cs
Artisan/Cleanup/: Cleanup.cs
Artisan/ContextMenus/: CraftingListContextMenu.cs
Artisan/CraftingList/: CraftingList.cs  CraftingListHelpers.cs  CraftingListUI.cs  PremadeLists.cs  RelicToolPremadeLists.Definitions.cs  RelicToolPremadeLists.cs  SpecialLists.cs  Teamcraft.cs
Artisan/CraftingLogic/: Calculations.cs  Condition.cs  CraftingActionExtensions.cs  CraftingOperations.cs  CraftingProcessor.cs  CraftingState.cs  CurrentCraft.cs  CurrentCraftMethods.cs  ISolver.cs  RecipeConfig.cs  Simulator.cs  SolverLogic.cs  SolverUtils.cs  State.cs  TrackConditions.cs
Artisan/CustomDeliveries/: AgentSatisfactionFixed.cs  SatisfactionDataCache.cs
Artisan/Discord/: Discord.Webhooks.cs
Artisan/FCWorkshops/: FCWorkshop.cs  FCWorkshopUI.cs
Artisan/GameInterop/: ActionManagerEx.cs  CSExt.cs  CharacterStats.cs  Crafting.cs  Operations.cs  PreCrafting.cs  QuickCrafting.cs
Artisan/IPC/: AutoRetainer.cs  AutoRetainerIPC.cs  Chat2.cs  IPC.cs  ItemVendorLocation.cs  RetainerInfo.cs  SimpleTweaks.cs
Artisan/MacroSystem/: Macro.cs  MacroUI.cs
Artisan/QuestSync/: QuestData.cs  QuestList.cs  ToDoListHelper.cs
Artisan/RawInformation/: ActionWatching.cs  AddonToDoList.cs  CharacterInfo.cs  (+16 more)
ClickLib/: ClickLib.sln  README.md
Data/: Artisan.json  CraftIt.json  samplePlugin.json
DemoScripts/: BasicSynthSpam.cs  DemoScripts.csproj
PunishLib/: PunishLib.sln
SamplePlugin/: Configuration.cs  CraftIt.cs  CraftIt.csproj  Plugin.cs  PluginAddressResolver.cs  PluginUI.cs  SamplePlugin.csproj  Service.cs
UIDev/: UIDev.csproj  UITest.cs
raphael-rs/: .gitignore  Cargo.toml  README.md  Trunk.toml  cloudflare-deploy.sh  index.html  serve-web.sh
raphael-rs/.cargo/: config.toml  config_wasm.toml
raphael-rs/.github/workflows/: fast-forward.yml  release.yaml  rust.yml
raphael-rs/assets/: _headers  ads.txt
raphael-rs/assets/fonts/M_PLUS_1_Code/: README.txt
raphael-rs/raphael-bindings/: Cargo.toml  NativeMethods.g.cs  bindings.h  build.rs
raphael-rs/raphael-bindings/src/: lib.rs
raphael-rs/raphael-cli/: Cargo.toml
raphael-rs/raphael-cli/src/: main.rs
raphael-rs/raphael-cli/src/commands/: mod.rs  search.rs  solve.rs
raphael-rs/raphael-data/: Cargo.toml
raphael-rs/raphael-data-updater/: Cargo.toml
raphael-rs/raphael-data-updater/src/: consumable.rs  item.rs  level_adjust_table.rs  lib.rs  main.rs  recipe.rs  rlvl.rs
raphael-rs/raphael-data/data/: item_names_de.rs  item_names_en.rs  item_names_fr.rs  item_names_jp.rs  item_names_kr.rs  items.rs  level_adjust_table.rs  meals.rs  potions.rs  rlvls.rs
raphael-rs/raphael-data/src/: config.rs  consumables.rs  lib.rs  locales.rs  search.rs
raphael-rs/raphael-data/tests/: test_consumables.rs  test_get_game_settings.rs  test_item_names.rs  test_recipes.rs
raphael-rs/raphael-sim/: Cargo.toml
raphael-rs/raphael-sim/benches/: bench_simulator.rs
raphael-rs/raphael-sim/src/: actions.rs  conditions.rs  effects.rs  lib.rs  settings.rs  state.rs
raphael-rs/raphael-sim/tests/: action_tests.rs  adversarial_tests.rs  backload_progress_tests.rs  effect_tests.rs  simulator_tests.rs
raphael-rs/raphael-solver/: Cargo.toml
raphael-rs/raphael-solver/examples/: macro_solver_example.rs
raphael-rs/raphael-solver/src/: actions.rs  finish_solver.rs  lib.rs  test_utils.rs
raphael-rs/raphael-solver/src/macro_solver/: mod.rs  pareto_front.rs  search_queue.rs  solver.rs
raphael-rs/raphael-solver/src/quality_upper_bound_solver/: mod.rs  solver.rs  state.rs  tests.rs
raphael-rs/raphael-solver/src/step_lower_bound_solver/: mod.rs  solver.rs  state.rs  tests.rs
raphael-rs/raphael-solver/src/utils/: atomic_flag.rs  mod.rs  pareto_front_builder.rs
raphael-rs/raphael-solver/tests/: 00_edge_cases.rs  01_progress_backload_exhaustive.rs  02_exhaustive.rs  03_adversarial_exhaustive.rs
raphael-rs/src/: app.rs  config.rs  lib.rs  main.rs  thread_pool.rs  util.rs
raphael-rs/src/widgets/: food_select.rs  help_text.rs  item_name_label.rs  macro_view.rs  mod.rs  new_food_select.rs  potion_select.rs  recipe_select.rs  render_info.rs  saved_rotations.rs  simulator.rs  stats_edit.rs  util.rs
(+189 files in other folders)
