[package]
name = "raphael-bindings"
version = "0.1.0"
edition = "2024"

[lib]
name = "raphael_bindings"
crate-type = ["cdylib"]

[dependencies]
raphael-sim = { workspace = true }
raphael-solver = { workspace = true }
rayon = { workspace = true }
log = { workspace = true }

[build-dependencies]
cbindgen = "0.28.0"
csbindgen = "1.9.3"
