[package]
name = "raphael-sim"
edition = "2024"

[lints]
workspace = true

[lib]
crate-type = ["rlib"]

[dev-dependencies]
criterion = "0.5.1"
rand = "0.9.1"

[dependencies]
bitfield-struct = "0.8.0"
serde = { workspace = true, optional = true }
log = { workspace = true }

[features]
serde = ["dep:serde"]

[[bench]]
name = "bench_simulator"
harness = false
